--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
-    <string name="_12288_12288_12288_12288_12288_12288">&#12288;&#12288;&#12288;&#12288;&#12288;御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠</string>
+    <string name="kg">&#12288;&#12288;&#12288;&#12288;</string>
 </resources>
